--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,39 @@
-
-
+aiohttp==3.9.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+attrs==23.2.0
+beautifulsoup4==4.12.3
+certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
+frozenlist==1.4.1
+idna==3.7
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.2.9
+langchain-core==0.2.21
+langchain-text-splitters==0.2.2
+langsmith==0.1.92
+multidict==6.0.5
+nltk==3.8.1
+numpy==1.26.4
+orjson==3.10.6
+packaging==24.1
+pandas==2.2.2
+pydantic==2.8.2
+pydantic_core==2.20.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
+regex==2024.5.15
+requests==2.32.3
+six==1.16.0
+soupsieve==2.5
+SQLAlchemy==2.0.31
+tenacity==8.5.0
+tqdm==4.66.4
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+yarl==1.9.4
