--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,28 @@
-aiohttp==3.9.5
-aiosignal==1.3.1
 annotated-types==0.7.0
-attrs==23.2.0
-beautifulsoup4==4.12.3
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
-dataclasses-json==0.6.7
 filelock==3.15.4
-frozenlist==1.4.1
 fsspec==2024.6.1
 huggingface-hub==0.24.0
 idna==3.7
 iniconfig==2.0.0
+Jinja2==3.1.4
 joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
-langchain==0.2.9
-langchain-community==0.2.9
 langchain-core==0.2.22
-langchain-text-splitters==0.2.2
-langsmith==0.1.92
-marshmallow==3.21.3
-multidict==6.0.5
-mypy-extensions==1.0.0
+langchain-huggingface==0.0.3
+langsmith==0.1.93
+MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.3
 nltk==3.8.1
 numpy==1.26.4
 orjson==3.10.6
 packaging==24.1
 pandas==2.2.2
+pillow==10.4.0
 pluggy==1.5.0
 pydantic==2.8.2
 pydantic_core==2.20.1
@@ -40,15 +34,17 @@ PyYAML==6.0.1
 regex==2024.5.15
 requests==2.32.3
 safetensors==0.4.3
+scikit-learn==1.5.1
+scipy==1.14.0
+sentence-transformers==3.0.1
 six==1.16.0
-soupsieve==2.5
-SQLAlchemy==2.0.31
+sympy==1.13.1
 tenacity==8.5.0
+threadpoolctl==3.5.0
 tokenizers==0.19.1
+torch==2.3.1
 tqdm==4.66.4
 transformers==4.42.4
-typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
-yarl==1.9.4
