--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ scipy==1.14.0
 sentence-transformers==3.0.1
 six==1.16.0
 sympy==1.13.1
+tabulate==0.9.0
 tenacity==8.5.0
 threadpoolctl==3.5.0
 tokenizers==0.19.1
