--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ langchain-huggingface==0.0.3
 langsmith==0.1.93
 MarkupSafe==2.1.5
 mpmath==1.3.0
+mypy==1.11.0
+mypy-extensions==1.0.0
 networkx==3.3
 nltk==3.8.1
 numpy==1.26.4
