--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 annotated-types==0.7.0
+blis==0.7.11
+catalogue==2.0.10
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
+cloudpathlib==0.18.1
+confection==0.1.5
+cymem==2.0.8
 filelock==3.15.4
 fsspec==2024.6.1
 huggingface-hub==0.24.0
@@ -13,9 +18,15 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 langchain-core==0.2.22
 langchain-huggingface==0.0.3
+langcodes==3.4.0
 langsmith==0.1.93
+language_data==1.2.0
+marisa-trie==1.2.0
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+mdurl==0.1.2
 mpmath==1.3.0
+murmurhash==1.0.10
 mypy==1.11.0
 mypy-extensions==1.0.0
 networkx==3.3
@@ -26,8 +37,10 @@ packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
 pluggy==1.5.0
+preshed==3.0.9
 pydantic==2.8.2
 pydantic_core==2.20.1
+Pygments==2.18.0
 pytest==8.2.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -35,19 +48,32 @@ pytz==2024.1
 PyYAML==6.0.1
 regex==2024.5.15
 requests==2.32.3
+rich==13.7.1
 safetensors==0.4.3
 scikit-learn==1.5.1
 scipy==1.14.0
 sentence-transformers==3.0.1
+setuptools==71.1.0
+shellingham==1.5.4
 six==1.16.0
+smart-open==7.0.4
+spacy==3.7.5
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
 sympy==1.13.1
 tabulate==0.9.0
 tenacity==8.5.0
+thinc==8.2.5
 threadpoolctl==3.5.0
 tokenizers==0.19.1
 torch==2.3.1
 tqdm==4.66.4
 transformers==4.42.4
+typer==0.12.3
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
+wasabi==1.1.3
+weasel==0.4.1
+wrapt==1.16.0
